# BA798_WEEK1_PRACTICE

./: .gitignore  JUPYTER_GUIDE.md  README.md  create_clustering_notebook.py  execute_notebook.py  launch_jupyter.bat  launch_jupyter.sh  pyproject.toml  requirements.txt  run_pipeline.py
data/raw/: FINAL_DISSERTATION_DATASET_ENRICHED.csv
docs/: GITIGNORE_GUIDE.md  IMPLEMENTATION_LOG.md  PIPELINE_DOCUMENTATION.md  RESULTS_ANALYSIS.md
notebooks/: 05_main_pipeline.ipynb  06_unsupervised_clustering_analysis.ipynb
outputs/clustering/: cluster_assignments.csv  cluster_profiles.csv  clustering_metrics.json
src/: __init__.py  config.py  data_loader.py  evaluator.py  models.py  preprocessor.py  trainer.py  utils.py
