[project]
name = "data-breach-ml-pipeline"
version = "0.1.0"
description = "ML pipeline for predicting regulatory action on data breaches"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "BA798 Team", email = ""}
]
license = {text = "Educational Use Only"}

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "shap>=0.44.0",
    "joblib>=1.3.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
python = "3.9"
